--- a/enroll/templates/enroll/addandshow.html
+++ b/enroll/templates/enroll/addandshow.html
@@ -1,6 +1,13 @@
-{% extends 'enroll/base.html' %}
-{% block content %}
+{% extends 'enroll/base.html' %} {% block content %}
 
-<h4>Add new student</h4>
+<div class="row">
+  <div class="col-sm-4">
+    <h4 class="text-center alert alert-info">Add new student</h4>
+    <form action="" method="POST">
+      {% csrf_token %} {{ form.as_p }}
+      <button type="submit" class="btn btn-success">Add</button>
+    </form>
+  </div>
+</div>
 
 {% endblock content %}
