--- a/enroll/templates/enroll/addandshow.html
+++ b/enroll/templates/enroll/addandshow.html
@@ -8,6 +8,34 @@
       <button type="submit" class="btn btn-success">Add</button>
     </form>
   </div>
+  <div class="col-sm-8">
+    <h4 class="text-center alert alert-info">All students</h4>
+    {% if students %}
+    <h4>Table data</h4>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Name</th>
+          <th scope="col">Email</th>
+          <th scope="col">Password</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for student in students %}
+        <tr>
+          <th scope="row">{{student.id}}</th>
+          <td>{{student.name}}</td>
+          <td>{{student.email}}</td>
+          <td>{{student.password}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {% else %}
+    <h4 class="text-center alert alert-danger">No data</h4>
+    {% endif %}
+  </div>
 </div>
 
 {% endblock content %}
