--- a/enroll/templates/enroll/addandshow.html
+++ b/enroll/templates/enroll/addandshow.html
@@ -19,6 +19,7 @@
           <th scope="col">Name</th>
           <th scope="col">Email</th>
           <th scope="col">Password</th>
+          <th scope="col">Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -28,6 +29,21 @@
           <td>{{student.name}}</td>
           <td>{{student.email}}</td>
           <td>{{student.password}}</td>
+          <td>
+            <a
+              href="{% url 'edit_data' student.id %}"
+              class="btn btn-warning btn-sm"
+              >Edit</a
+            >
+            <form
+              action="{% url 'delete_data' student.id %}"
+              method="POST"
+              class="d-inline"
+            >
+              {% csrf_token %}
+              <input type="submit" value="Delete" class="btn btn-danger" />
+            </form>
+          </td>
         </tr>
         {% endfor %}
       </tbody>
