--- a/enroll/templates/enroll/updatestudent.html
+++ b/enroll/templates/enroll/updatestudent.html
@@ -1,6 +1,15 @@
-{% extends 'enroll/base.html' %}
-{% block content %}
+{% extends 'enroll/base.html' %} {% block content %}
 
-<h4>Update student</h4>
+<div class="row">
+  <div class="col-sm-8 offset-2">
+    <h4>Update student</h4>
+    <form action="" method="POST">
+      {% csrf_token %} {{ form.as_p }}
+      <button type="submit" class="btn btn-success" value="Update">
+        Update
+      </button>
+    </form>
+  </div>
+</div>
 
 {% endblock content %}
